---------------------------------------------------------------------------------------------------
Version: 0.18.5
Date: 24. 2. 2020
  Changes:
    - Added hidden dependency to Bob's Adjustable Inserters (fixes setting filter from wrong inventory when pickup location is rotated)

  Locale:
    - Added translated mod description
---------------------------------------------------------------------------------------------------
Version: 0.18.4
Date: 23. 2. 2020
  Changes:
    - Removed incompatibility with Upgrade Builder and Planner (see Bugfixes)

  Bugfixes:
    - Added additional check for entity type, since event filters are not applied to mod-raised events
---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 23. 2. 2020
  Changes:
    - Minor improvements (typos, code style)
    - Added incompatibility with Upgrade Builder and Planner (until crash is fixed, see https://mods.factorio.com/mod/Autofilter/discussion/5e5177cbf26569000bdd51eb)

  Graphics:
    - Changed thumbnail to the better
---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 22. 2. 2020
  Changes:
    - Matched changelog file format to what Factorio expects

  Info:
    - Also downgraded to Factorio 0.17, see below
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 22. 2. 2020
  Bugfixes:
    - Added missing entity check (caused game crash on inserter placement without adjacent entity)
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 22. 2. 2020
  Features:
    - Added automatic setting of filter on inserter placement
    - Added player mod setting to control mod behaviour
---------------------------------------------------------------------------------------------------
Version: 0.17.0
Date: 22. 2. 2020
  Info: