@@ -3,6 +3,7 @@ Version: 0.18.5
 Date: 24. 2. 2020
   Changes:
     - Added hidden dependency to Bob's Adjustable Inserters (fixes setting filter from wrong inventory when pickup location is rotated)
+	- Added check for empty filter and whitelist mode to avoid overwriting filter on replacing preexisting inserters/ghosts
 
   Locale:
     - Added translated mod description
